# autotools

./: Makefile.am  README  autogen.sh  configure.ac  dist.make  testlib.cpp  testtool.cpp
testsuite/: Makefile.am
testsuite/bc.test/: expr.exp
testsuite/boards/: testboard.exp
testsuite/config/: base-config.exp  default.exp
testsuite/lib/: bc.exp  testtool.exp
testsuite/testtool.test/: test.exp
